@@ -6,19 +6,16 @@ Kate Team:
   (highlight guy + big bug hunter)
 
 - Anders Lund <anders@alweb.dk>
-  (very cool split view + much more)
+  (bookmarks, iconborder, ...)
   
 - Waldo Bastian <bastian@kde.org>
-  (improved buffer handling)
+  (buffer handling)
   
 - Charles Samuels <charles@kde.org>
   (regular expressions)
 
 - Michael Bartl <michael.bartl1@chello.at>
   (first one who really helped out :)
-
-- Phlip <phlip_cpp@my-deja.com>
-  (project stuff)
 
 - Matt Newell <newellm@proaxis.com>
 
